[gd_scene load_steps=13 format=3 uid="uid://c8b28xnw4vtij"]

[ext_resource type="Script" uid="uid://db8dknofiq20c" path="res://Player/Player.gd" id="1_q3lat"]
[ext_resource type="Texture2D" uid="uid://c0oqb4jpo8u3k" path="res://Assets/Player/Loopy_Lyle_2-Sheet.png" id="3_ddoul"]
[ext_resource type="Script" uid="uid://lk0psn065mww" path="res://Player/interact.gd" id="3_tok1r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q3lat"]
size = Vector2(10, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tok1r"]
size = Vector2(15, 23)

[sub_resource type="Animation" id="Animation_s1rgi"]
resource_name = "Kick"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [7, 9, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:not_in_cutscene")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.499),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["walk_horizontal"],
"method": &"_play_animation"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimationPlayer:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_ddoul"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:not_in_cutscene")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_vlldt"]
resource_name = "interact"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [7, 10, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:not_in_cutscene")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.499),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["walk_horizontal"],
"method": &"_play_animation"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimationPlayer:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_6ysni"]
resource_name = "walk_down"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 0]
}

[sub_resource type="Animation" id="Animation_tok1r"]
resource_name = "walk_horizontal"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 7]
}

[sub_resource type="Animation" id="Animation_8g4oa"]
resource_name = "walk_up"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s1rgi"]
_data = {
&"Kick": SubResource("Animation_s1rgi"),
&"RESET": SubResource("Animation_ddoul"),
&"interact": SubResource("Animation_vlldt"),
&"walk_down": SubResource("Animation_6ysni"),
&"walk_horizontal": SubResource("Animation_tok1r"),
&"walk_up": SubResource("Animation_8g4oa")
}

[node name="player" type="CharacterBody2D" node_paths=PackedStringArray("sprite", "sprite_animator", "collider", "interacter")]
script = ExtResource("1_q3lat")
sprite = NodePath("sprite")
sprite_animator = NodePath("sprite/AnimationPlayer")
collider = NodePath("CollisionShape2D")
interacter = NodePath("Interact")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_q3lat")

[node name="Interact" type="Area2D" parent="."]
position = Vector2(-2.5, 0)
script = ExtResource("3_tok1r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact"]
shape = SubResource("RectangleShape2D_tok1r")

[node name="sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("3_ddoul")
hframes = 11
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="sprite"]
libraries = {
&"": SubResource("AnimationLibrary_s1rgi")
}

[connection signal="area_entered" from="Interact" to="Interact" method="_on_area_entered"]
[connection signal="area_exited" from="Interact" to="Interact" method="_on_area_exited"]
[connection signal="body_entered" from="Interact" to="Interact" method="_on_body_entered"]
[connection signal="body_exited" from="Interact" to="Interact" method="_on_body_exited"]
